objects/AdvAccountForecastFact.object
<CustomObject>
    <fields>
        <fullName>Formula_Field__c</fullName>
        <formula>IF(NOT(ISBLANK(PMC_SS_CurrentSalesPlanMTN__c)) &amp;&amp; PMC_SS_UnitOfMeasureName__c=&apos;STN&apos;,PMC_SS_CurrentSalesPlanMTN__c*1.10,
IF(NOT(ISBLANK(PMC_SS_CurrentSalesPlanMTN__c)) &amp;&amp; PMC_SS_UnitOfMeasureName__c=&apos;MTN&apos;,PMC_SS_CurrentSalesPlanMTN__c*0.90,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>States the Account Manager related to the forecast.</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Accuracy__c</fullName>
        <description>Formula to calculate the Accuracy</description>
        <formula>IF( NOT(ISNULL(PMC_SS_CurrentSalesPlan__c))&amp;&amp; ABS((PMC_SS_ShippedQuantity__c/ PMC_SS_CurrentSalesPlan__c) * 100)&gt;=200,0,IF(NOT(ISNULL(PMC_SS_CurrentSalesPlan__c))&amp;&amp; ABS((PMC_SS_ShippedQuantity__c/PMC_SS_CurrentSalesPlan__c) * 100)&gt;=150,50,IF(NOT(ISNULL(PMC_SS_CurrentSalesPlan__c)),ABS((PMC_SS_ShippedQuantity__c/ PMC_SS_CurrentSalesPlan__c) * 100),0)))</formula>
        <label>Accuracy %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ActiveContracts__c</fullName>
        <description>States number of Active contracts.</description>
        <label>Active Contracts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ConsensusDemandPlan__c</fullName>
        <label>Consensus Demand Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CurrentSalesPlanMTN__c</fullName>
        <label>Current Sales Plan (MTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CurrentSalesPlanSTN__c</fullName>
        <label>Current Sales Plan (STN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_CurrentSalesPlan__c</fullName>
        <description>User Editable field to capture current sales plan for forecast</description>
        <label>Current Sales Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>States the Product Location related to the forecast.</description>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Advanced Account Forecast Facts</relationshipLabel>
        <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OpenOrders__c</fullName>
        <description>States number of Open orders.</description>
        <label>Open Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_OpenQuotes__c</fullName>
        <description>States number of Open Quotes.</description>
        <label>Open Quotes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ShippedQuantity__c</fullName>
        <description>States the values of shipped quantity for each product.</description>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_StatisticalBaselineForecast__c</fullName>
        <description>States the baseline forecast data received from O9</description>
        <label>Statistical Baseline Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitOfMeasureName__c</fullName>
        <formula>PMC_SS_UnitofMeasure__r.Name</formula>
        <label>Unit of Measure Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitofMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to track unit of measure</description>
        <label>Unit of Measure</label>
        <referenceTo>UnitOfMeasure</referenceTo>
        <relationshipLabel>Advanced Account Forecast Facts</relationshipLabel>
        <relationshipName>Advanced_Account_Forecast_Facts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>My_Advanced_Account_Forecast_Facts</fullName>
        <columns>Name</columns>
        <columns>AdvAcctForecastSetPartner</columns>
        <columns>Period</columns>
        <columns>Status</columns>
        <columns>AdvAcctForecastSetUse</columns>
        <filterScope>Mine</filterScope>
        <label>My Advanced Account Forecast Facts</label>
    </listViews>
    <listViews>
        <fullName>Recently_Created_Forecast_Fact</fullName>
        <columns>Name</columns>
        <columns>AdvAcctForecastSetPartner</columns>
        <columns>Period</columns>
        <columns>Status</columns>
        <columns>AdvAcctForecastSetUse</columns>
        <columns>CreatedDate</columns>
        <columns>Account</columns>
        <columns>LastModifiedDate</columns>
        <columns>PMC_SS_OpenOrders__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AdvAcctForecastSetUse</field>
            <operation>contains</operation>
            <value>KLM</value>
        </filters>
        <label>Recently Created Forecast Fact</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>